# catkin_cython_example

./: CMakeLists.txt  README.md  package.xml  setup.py
cmake/: FindCython.cmake  ReplicatePythonSourceTree.cmake  UseCython.cmake
include/catkin_cython_example/: example_a.hpp  example_a_factory.hpp
scripts/: demo_example_a.py
src/cython/: CMakeLists.txt  c_example_a_factory.pxd  example_a.pxd  example_a.pyx  example_a_factory.pyx
