<?xml version="1.0"?>
<package>
    <name>catkin_cython_example</name>
    <version>1.0.0</version>
    <description>
        Example package
    </description>
    <author email="ilija.stanojkovic@tuebingen.mpg.de">Ilija Stanojkovic</author>
    <maintainer email="ilija.stanojkovic@tuebingen.mpg.de">Ilija Stanojkovic</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
</package>
